// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legend has correct default options 1`] = `
<ul
  className="grommetux-list grommetux-legend"
  role="list"
>
  <li
    className="grommetux-box grommetux-box--direction-row grommetux-box--justify-between grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-horizontal-small grommetux-box--separator-none grommetux-list-item grommetux-legend__item"
    id={undefined}
    onClick={undefined}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="listitem"
    style={Object {}}
    tabIndex={undefined}
  >
    <span
      className="grommetux-legend__item-label"
    >
      <svg
        className="grommetux-legend__item-swatch grommetux-color-index-graph-1"
        viewBox="0 0 12 12"
      >
        <path
          className={undefined}
          d="M 5 0 l 0 12"
        />
      </svg>
      <span>
        North America
      </span>
    </span>
    <span
      className="grommetux-legend__item-value"
    >
      40
      <span
        className="grommetux-legend__item-units"
      >
        B
      </span>
    </span>
  </li>
  <li
    className="grommetux-box grommetux-box--direction-row grommetux-box--justify-between grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-horizontal-small grommetux-box--separator-none grommetux-list-item grommetux-legend__item"
    id={undefined}
    onClick={undefined}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="listitem"
    style={Object {}}
    tabIndex={undefined}
  >
    <span
      className="grommetux-legend__item-label"
    >
      <svg
        className="grommetux-legend__item-swatch grommetux-color-index-accent-2"
        viewBox="0 0 12 12"
      >
        <path
          className={undefined}
          d="M 5 0 l 0 12"
        />
      </svg>
      <span>
        South America
      </span>
    </span>
    <span
      className="grommetux-legend__item-value"
    >
      30
      <span
        className="grommetux-legend__item-units"
      >
        B
      </span>
    </span>
  </li>
  <li
    className="grommetux-box grommetux-box--direction-row grommetux-box--justify-between grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-horizontal-small grommetux-box--separator-none grommetux-list-item grommetux-legend__item"
    id={undefined}
    onClick={undefined}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="listitem"
    style={Object {}}
    tabIndex={undefined}
  >
    <span
      className="grommetux-legend__item-label"
    >
      <svg
        className="grommetux-legend__item-swatch grommetux-color-index-unset"
        viewBox="0 0 12 12"
      >
        <path
          className={undefined}
          d="M 5 0 l 0 12"
        />
      </svg>
      <span>
        Europe
      </span>
    </span>
    <span
      className="grommetux-legend__item-value"
    >
      20
      <span
        className="grommetux-legend__item-units"
      >
        B
      </span>
    </span>
  </li>
  <li
    className="grommetux-box grommetux-box--direction-row grommetux-box--justify-between grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-horizontal-small grommetux-box--separator-none grommetux-list-item grommetux-legend__item"
    id={undefined}
    onClick={undefined}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="listitem"
    style={Object {}}
    tabIndex={undefined}
  >
    <span
      className="grommetux-legend__item-label"
    >
      <svg
        className="grommetux-legend__item-swatch grommetux-color-index-graph-2"
        viewBox="0 0 12 12"
      >
        <path
          className={undefined}
          d="M 5 0 l 0 12"
        />
      </svg>
      <span>
        Africa
      </span>
    </span>
    <span
      className="grommetux-legend__item-value"
    >
      10
      <span
        className="grommetux-legend__item-units"
      >
        B
      </span>
    </span>
  </li>
  <li
    className="grommetux-box grommetux-box--direction-row grommetux-box--justify-between grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-horizontal-small grommetux-box--separator-none grommetux-list-item grommetux-legend__item"
    id={undefined}
    onClick={undefined}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="listitem"
    style={Object {}}
    tabIndex={undefined}
  >
    <span
      className="grommetux-legend__item-label"
    >
      <svg
        className="grommetux-legend__item-swatch grommetux-color-index-graph-3"
        viewBox="0 0 12 12"
      >
        <path
          className={undefined}
          d="M 5 0 l 0 12"
        />
      </svg>
      <span>
        Asia
      </span>
    </span>
    <span
      className="grommetux-legend__item-value"
    >
      15
      <span
        className="grommetux-legend__item-units"
      >
        B
      </span>
    </span>
  </li>
  <li
    className="grommetux-box grommetux-box--direction-row grommetux-box--justify-between grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-horizontal-small grommetux-box--separator-none grommetux-list-item grommetux-legend__item"
    id={undefined}
    onClick={undefined}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="listitem"
    style={Object {}}
    tabIndex={undefined}
  >
    <span
      className="grommetux-legend__item-label"
    >
      <svg
        className="grommetux-legend__item-swatch grommetux-color-index-graph-4"
        viewBox="0 0 12 12"
      >
        <path
          className={undefined}
          d="M 5 0 l 0 12"
        />
      </svg>
      <span>
        Australia
      </span>
    </span>
    <span
      className="grommetux-legend__item-value"
    >
      10
      <span
        className="grommetux-legend__item-units"
      >
        B
      </span>
    </span>
  </li>
</ul>
`;

exports[`Legend has no floating point errors in the total 1`] = `
<ul
  className="grommetux-list grommetux-legend"
  max="10"
  role="list"
>
  <li
    className="grommetux-box grommetux-box--direction-row grommetux-box--justify-between grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-horizontal-small grommetux-box--separator-none grommetux-list-item grommetux-legend__item"
    id={undefined}
    onClick={undefined}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="listitem"
    style={Object {}}
    tabIndex={undefined}
  >
    <span
      className="grommetux-legend__item-value"
    >
      2.53
      <span
        className="grommetux-legend__item-units"
      >
        apples
      </span>
    </span>
  </li>
  <li
    className="grommetux-box grommetux-box--direction-row grommetux-box--justify-between grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-horizontal-small grommetux-box--separator-none grommetux-list-item grommetux-legend__item"
    id={undefined}
    onClick={undefined}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="listitem"
    style={Object {}}
    tabIndex={undefined}
  >
    <span
      className="grommetux-legend__item-value"
    >
      2.01
      <span
        className="grommetux-legend__item-units"
      >
        apples
      </span>
    </span>
  </li>
  <li
    className="grommetux-box grommetux-box--direction-row grommetux-box--justify-between grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-horizontal-small grommetux-box--separator-none grommetux-list-item grommetux-legend__total"
    id={undefined}
    onClick={undefined}
    role="listitem"
    style={Object {}}
    tabIndex={undefined}
  >
    <span
      className="grommetux-legend__total-label"
    >
      <span>
        Total
      </span>
    </span>
    <span
      className="grommetux-legend__total-value"
    >
      4.54
      <span
        className="grommetux-legend__total-units"
      >
        apples
      </span>
    </span>
  </li>
</ul>
`;
